# pin-board-download

./: .gitignore  Cargo.toml  flake.nix  pyproject.toml  script.py
.github/workflows/: workflow.yml
pin_board_download/: __main__.py  cli.py  logging.py
src/: main.rs
