[package]
name = "pin-board-download-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
